Fixed missing Work Projects in About and Contact pages; Replaced Projects with Personal Projects in About and Contact pages; Fixed Contact button being too close to others on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -114,4 +114,8 @@ h5 {
     .btn-toolbar.mb-3 {
         padding-right: 2rem;
     }
+
+    .btn {
+        margin-bottom: .25rem;
+    }
 }
